--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".Main" >
+        <activity android:name="com.cavanhaman.ceprest.Main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BuscaCep" android:label="@string/app_busca"></activity>
-        <activity android:name=".Detalhes"  android:label="@string/app_detalhes"></activity>
-        <activity android:name=".Lista" android:label="@string/app_histori"></activity>
+        <activity android:name="com.cavanhaman.ceprest.BuscaCep" android:label="@string/app_busca"></activity>
+        <activity android:name="com.cavanhaman.ceprest.Detalhes"  android:label="@string/app_detalhes"></activity>
+        <activity android:name="com.cavanhaman.ceprest.Lista" android:label="@string/app_histori"></activity>
     </application>
 
 </manifest>
